tests/codegen/fail/scalar/derive_input/derive_transparent_unit_struct.rs
use coasys_juniper::GraphQLScalar;

#[derive(GraphQLScalar)]
#[graphql(transparent)]
struct ScalarSpecifiedByUrl;

fn main() {}
